--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -5096,6 +5096,10 @@ python3-bcrypt:
   opensuse: [python3-bcrypt]
   rhel: ['python%{python3_pkgversion}-bcrypt']
   ubuntu: [python3-bcrypt]
+python3-beamngpy-pip:
+  '*':
+    pip:
+      packages: [beamngpy]
 python3-beartype:
   fedora: [python3-beartype]
   ubuntu:
